brief note of what changed

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             padding: 1rem 2rem;
             border-radius: 0.5rem;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            display: none; /* Hide by default to prevent FOUC */
         }
-        #loading-message { display: none; } /* Hide by default to prevent FOUC */
 
         /* Utility class to reveal the canvas */
         .loaded {
